# password-manager

./: .gitignore  README.md  TODO.txt  launch.json  main.py  password_manager.py  pyproject.toml  requirements.txt  run.py  utils.py
app/: __main__.py
app/alembic/: env.py
app/alembic/versions/: 2022-11-28-18-41_init.py  2022-12-07-14-58_init.py
app/commands/: commands.py  credential_command.py  domain_command.py  third_party_cred_command.py
app/core/: auth.py  helpers.py  settings.py
app/daos/: credential_dao.py  domain_dao.py  third_party_dao.py
app/db/: dependencies.py  init_db.py  utils.py
app/models/: credential_model.py  domain_model.py  third_party_cred_model.py  third_party_model.py
app/utils/: app_paths.py  tab_completer.py  validators.py
password_manager/: password_manager.py
password_manager/Utils/: locations.py  util.py
sql_app/: crud.py  main.py  models.py  schemas.py
todo/: __init__.py  __main__.py  cli.py  config.py  database.py  todo.py
